# opendash

./: .branch_sync_marker  .gitignore  BLE_OTA.md  BLE_OTA_ASSESSMENT.md  BLE_OTA_ASSESSMENT.txt  BLUETOOTH_PAIRING.md  BUILD_DEPENDENCIES.md  CHANGELOG.md  COMPILE_ERRORS_RESOLUTION.md  DATAFLOW.md  DATAFLOW_FIX.md  DISPLAY_SYNCHRONIZATION.md  FEATURES_AND_SENSORS.md  FONT_ISSUE_INVESTIGATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PER_NODE_DISPLAY_CONFIG_SPEC.md  PROJECT_INDEX.md  QUICKSTART.md  QUICK_REFERENCE.md  RESOLUTION_SUMMARY.md  SCREEN_ENHANCEMENTS.md  SYNC_COMPLETE.md  TEARING.md  TODO.md  TODO.md.pre-cleanup-bak  UART_CONNECTION.md  ble_ota.py  boost-controller-opendash.md  check_deps.sh  commit_message.md  monitor_node.py  opendash.code-workspace  push_branches.sh  push_center.sh  push_gps.sh  push_left.sh  push_right.sh  readme.md
agent/: mash-up.code-workspace  opendash.agent.md  opendash.instructions.md
boostcontrol-staging/: README.md  boost_control.h
center/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.modified
center copy/main/: CMakeLists.txt  display_init.c  display_init.h  espnow_master.c  espnow_master.h  i2c_master.h  main.c  ui_manager.c  ui_manager.h  ui_manager_old.c
center-bk/: README.md  sdkconfig.defaults
center-pre-restore-2026-05-24/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.modified
center-pre-restore-2026-05-24/main/: CMakeLists.txt  boost_client.c  boost_client.h  boost_config_ui.c  boost_config_ui.h  display_init.h  espnow_master.c  espnow_master.h  layout_editor.c  layout_editor.h  main.c  sd_logger.c  sd_logger.h  system_config.c  system_config.h  ui_manager.h  ui_manager.h.modified
center/main/: CMakeLists.txt  boost_client.c  boost_client.h  boost_config_ui.c  boost_config_ui.c.crash-bak  boost_config_ui.c.preboost-polish.bak  boost_config_ui.h  display_init.c  display_init.h  espnow_master.c  espnow_master.h  i2c_master.c  idf_component.yml  lv_mem_psram.c  main.c  system_config.c  system_config.h  ui_manager.c  ui_manager.c.modified  ui_manager.h  ui_manager_old.c
common/: CMakeLists.txt  idf_component.yml
common-pre-restore-2026-05-24/: CMakeLists.txt
common/fonts/: README.md  convert_fonts.py  font_config.json
common/fonts/ttf/: .gitkeep
common/images/: README.md  convert_images.py
common/images/source/: README.md
common/include/: channel_config.h  channel_management.h  node_health.h  opendash_boost.h  opendash_bt_ota.h  opendash_checklist.h  opendash_common.h  opendash_data_model.h  opendash_display_config.h  opendash_espnow.h  opendash_fonts.h  opendash_i2c_protocol.h  opendash_identity.h  opendash_layout.h  opendash_layout_store.h  opendash_obd2.h  opendash_obd_config.h  opendash_odometer.h  opendash_parachute.h  opendash_relay.h  opendash_rollover.h  opendash_rtc.h  opendash_uart.h  opendash_ui_styles.h  opendash_wifi_ble.h
common/src/: channel_management.c  node_health.c  opendash_boost.c  opendash_bt_ota.c  opendash_checklist.c  opendash_data_model.c  opendash_display_config.c  opendash_dp_catalog.c  opendash_espnow.c  opendash_i2c_protocol.c  opendash_identity.c  opendash_layout_store.c  opendash_obd_config.c  opendash_parachute.c  opendash_parachute_actuator.c  opendash_rollover_detector.c  opendash_rtc.c  opendash_uart.c
docs/: FONTS_QUICK_START.md  FONT_SYSTEM_IMPLEMENTATION.md  LAP_TRACKING_PLAN.md  architecture.md  center-display-guide.md  data-points.md  font-system-testing.md  hardware.md  i2c-protocol.md  relay-espnow-protocol.md  setup-guide.md  vscode-setup.md
feature-per-node-config/: IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md.bak  README.md  test_feature.c
gps/: CMakeLists.txt  INTENSIVE_TODO.md  README.md  continuity_test.py  sdkconfig.defaults  v15L2_final2_summary.txt  v15L_summary.txt  v15k3_summary.txt  waveshare-amoled-gps-i2c-lc76g.py
gps-bk/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  v15L2_final_summary.txt  v15L2_summary.txt  v15L3_summary.txt  v15k2_summary.txt  v15k_summary.txt
gps/main/: CMakeLists.txt  display_init.c  display_init.h  gps_handler.c  gps_handler.h  i2c_node.c  i2c_node.h  idf_component.yml  imu_handler.c  imu_handler.h  main.c  sd_logger.c  sd_logger.h  ui_manager.c  ui_manager.h
left/: README.md  display.ini  partitions.csv  sdkconfig.defaults  waveshare2.8-pinout.txt
left-right/: CMakeLists.txt  README.md  sdkconfig.defaults
left-right/main/: CMakeLists.txt  display_init.c  display_init.h  idf_component.yml  main.c  ui_manager.c  ui_manager.h
left/main/: CMakeLists.txt  display_init.c  display_init.h  idf_component.yml  main.c  ui_manager.c  ui_manager.h
main/: CMakeLists.txt  display_init.c  display_init.h  idf_component.yml  ui_manager.h
mos-4ch-a/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
mos-4ch-a-pre-restore-2026-05-24/: partitions.csv  sdkconfig.defaults
mos-4ch-b/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
openDstream/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
openDstream/main/: CMakeLists.txt  main.c
opendash_channel_based_implementation/: README.md  channel_config.h  channel_management.c  espnow_master.c  espnow_master.h
pod1/: CMakeLists.txt  sdkconfig.defaults
pod2/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
pod2/main/: CMakeLists.txt  display_init.c  idf_component.yml  main.c  ui_manager.c  ui_manager.h
relay-4ch-hd/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
relay-8ch-a/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
relay-8ch-a/main/: CMakeLists.txt  idf_component.yml  main.c
relay-8ch-b/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
right/: CMakeLists.txt  README.md  sdkconfig.defaults
scripts/: apply_license_notice.py  od-flash.py  tearing_capture.sh
wiki/: LC76G-10Hz-Spec-Breakout.md  LC76G-I2C-GPS-Driver-Guide.md  boost-controller.md  data-intake-formats.md  data-points.html  device-identity-serial-numbers.md  font-update-guide.md  gps-driver-debugging-v16.md  gps-unit.md  hardware.html  index.html  obd2-integration.md  (+10 more)
(+109 files in other folders)
